--- a/main/static/main/css/main4.css
+++ b/main/static/main/css/main4.css
@@ -4,6 +4,26 @@ body{
 	font-family: 'Helvetica', sans-serif;
 	overflow-x: hidden;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 1.09vw;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f2f2f2;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #A7C957;
+  border-radius: 0.73vw;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 .mycontainer{
 	background-color: #F2E8CF;
 }
@@ -11,20 +31,21 @@ body{
     font-family: Helvetica;
 }
 select, input{
-    font-size:14px;
+    font-size:1.024vw;
 }
 /* MAP Start */
 .mapdiv{
 	width: 80%;
 	margin: auto;
-	padding: 7% 0 5% 0;
+	top: -3.66vw;
+	padding-bottom: 3.66vw;
 	position: relative;
 	z-index: 3;
 }
 .mapdiv path{
 	fill: #6A994E;
 	stroke: #A7C957;
-	stroke-width: 1px;
+	stroke-width: 0.073vw;
 	transition: fill 0.3s;
 }
 .mapdiv path:hover{
@@ -33,21 +54,13 @@ select, input{
 
 /* BOOKING FORM START */
 .dFlex, .ctaGroup, header nav .myAccount .ctaGroup .cta, .booking_info .opt, .booking_info .opt span, .booking_details, .booking_details .item .cta {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   overflow: hidden;
 }
 
 .hotel_content {
   text-align: center;
-  width: 768px;
+  width: 56.22vw;
   margin: auto;
   padding-bottom: 19.5%;
   padding-top: 5%;
@@ -56,43 +69,31 @@ select, input{
 }
 
 .info h2 {
-    padding-top: 30px;
+    padding-top: 2.19vw;
     color: #386641;
 }
 
 .info p {
-  font-size: 12px;
-}
-
-.booking_info {
-  margin-top: -5px;
+  font-size: 0.87vw;
 }
 
 .booking_info .opt {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
   position: relative;
-  top: 30px;
+  top: 2.19vw;
   z-index: 1;
 }
 
 .booking_info .opt span {
-  width: 130px;
-  height: 70px;
-  border-radius: 20px;
+  width: 9.51vw;
+  height: 5.12vw;
+  border-radius: 1.46vw;
   background-color: #386641;
   color: #fff;
   cursor: pointer;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  font-size: 14px;
+  font-size: 1.024vw;
   position: relative;
   z-index: 2;
-  padding-top: 15px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  padding-top: 1.09vw;
 }
 
 .booking_info .opt span.active {
@@ -101,60 +102,30 @@ select, input{
 }
 
 .booking_info .opt span + span {
-  left: -15px;
+  left: -1.09vw;
   z-index: 1;
 }
 
 .booking_details {
   background-color: #fff;
-  height: 60px;
-  border-radius: 15px;
+  height: 15vw;
+  border-radius: 1.09vw;
   position: relative;
   z-index: 2;
-  -webkit-box-shadow: 1px 1px 20px 0px rgba(50, 50, 50, 0.3);
-          box-shadow: 1px 1px 20px 0px rgba(50, 50, 50, 0.3);
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0 15px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.booking_details .item {
-  font-size: 10px;
-  padding: 0 10px 0 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  overflow-y: auto;
+  padding: 1.09vw;
   text-align: left;
 }
 
-.booking_details .item .cta {
-    width: 135px;
-    height: 35px;
-    border: 1px solid #BC4749;
-    font-size: 14px;
-    border-radius: 35px;
-    color: #BC4749;
-    cursor: pointer;
-    background-color: #BC4749;
-    color: #fff;
-}
-
-.booking_details .item + .item {
-    border-left: 1px solid #BC4749;
-}
-
-.booking_details .item:nth-last-child(1) {
-    border-left: none;
-}
-
-.booking_details .item:nth-child(1) {
-    padding: 0;
-    padding-left: 5px;
+.planyourtrip {
+  background-color: #fff;
+  height: 30vw;
+  border-radius: 1.09vw;
+  position: relative;
+  z-index: 2;
+  overflow-y: auto;
+  padding: 1.09vw;
+  text-align: left;
 }
 
 .hotel {
@@ -173,7 +144,7 @@ select, input{
           animation: drive 15s;
     -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-    width: 80px;
+    width: 5.85vw;
     z-index: 3;
 	overflow: hidden;
 }
@@ -185,7 +156,7 @@ select, input{
           animation: drive 10s;
     -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-    width: 80px;
+    width: 5.85vw;
     z-index: 3;
 	overflow: hidden;
 }
@@ -197,7 +168,7 @@ select, input{
           animation: drive_2 20s;
     -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-    width: 80px;
+    width: 5.85vw;
     z-index: 3;
     overflow: hidden;
 }
@@ -209,19 +180,19 @@ select, input{
           animation: drive_2 12s;
     -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-    width: 80px;
+    width: 5.85vw;
     z-index: 3;
     overflow: hidden;
 }
 
 .cloud {
     position: absolute;
-    top: -70px;
+    top: -5.12vw;
     -webkit-animation: cloud_1 50s;
           animation: cloud_1 50s;
     -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-    width: 800px;
+    width: 58.56vw;
     z-index: 1;
     overflow: hidden;
 }
@@ -233,7 +204,7 @@ select, input{
           animation: cloud_2 60s;
     -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-    width: 500px;
+    width: 36.6vw;
     z-index: 1;
     overflow: hidden;
 }
@@ -245,7 +216,7 @@ select, input{
           animation: cloud_2 30s;
     -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-    width: 500px;
+    width: 36.6vw;
     z-index: 1;
     overflow: hidden;
 }
@@ -257,96 +228,96 @@ select, input{
           animation: cloud_2 70s;
     -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-    width: 500px;
+    width: 36.6vw;
     z-index: 1;
     overflow: hidden;
 }
 
 @-webkit-keyframes drive {
   from {
-    -webkit-transform: translateX(-100px);
-            transform: translateX(-100px);
+    -webkit-transform: translateX(-7.32vw);
+            transform: translateX(-7.32vw);
   }
   to {
-    -webkit-transform: translateX(1950px);
-            transform: translateX(1950px);
+    -webkit-transform: translateX(142.75vw);
+            transform: translateX(142.75vw);
   }
 }
 
 @keyframes drive {
   from {
-    -webkit-transform: translateX(-100px);
-            transform: translateX(-100px);
+    -webkit-transform: translateX(-7.32vw);
+            transform: translateX(-7.32vw);
   }
   to {
-    -webkit-transform: translateX(1950px);
-            transform: translateX(1950px);
+    -webkit-transform: translateX(142.75vw);
+            transform: translateX(142.75vw);
   }
 }
 
 @-webkit-keyframes drive_2 {
   from {
-    -webkit-transform: translateX(1950px);
-            transform: translateX(1950px);
+    -webkit-transform: translateX(142.75vw);
+            transform: translateX(142.75vw);
   }
   to {
-    -webkit-transform: translateX(-200px);
-            transform: translateX(-200px);
+    -webkit-transform: translateX(-14.64vw);
+            transform: translateX(-14.64vw);
   }
 }
 
 @keyframes drive_2 {
   from {
-    -webkit-transform: translateX(1950px);
-            transform: translateX(1950px);
+    -webkit-transform: translateX(142.75vw);
+            transform: translateX(142.75vw);
   }
   to {
-    -webkit-transform: translateX(-200px);
-            transform: translateX(-200px);
+    -webkit-transform: translateX(-14.64vw);
+            transform: translateX(-14.64vw);
   }
 }
 
 @-webkit-keyframes cloud_1 {
   from {
-    -webkit-transform: translateX(1900px);
-            transform: translateX(1900px);
+    -webkit-transform: translateX(130.09vw);
+            transform: translateX(130.09vw);
   }
   to {
-    -webkit-transform: translateX(-900px);
-            transform: translateX(-900px);
+    -webkit-transform: translateX(-65.88vw);
+            transform: translateX(-65.88vw);
   }
 }
 
 @keyframes cloud_1 {
   from {
-    -webkit-transform: translateX(1900px);
-            transform: translateX(1900px);
+    -webkit-transform: translateX(139.09vw);
+            transform: translateX(139.09vw);
   }
   to {
-    -webkit-transform: translateX(-900px);
-            transform: translateX(-900px);
+    -webkit-: translateX(-65.88vw);
+            transform: translateX(-65.88vw);
   }
-}
+}transform
 
 @-webkit-keyframes cloud_2 {
   from {
-    -webkit-transform: translateX(1900px);
-            transform: translateX(1900px);
+    -webkit-transform: translateX(139.09vw);
+            transform: translateX(139.09vw);
   }
   to {
-    -webkit-transform: translateX(-500px);
-            transform: translateX(-500px);
+    -webkit-transform: translateX(-36.6vw);
+            transform: translateX(-36.6vw);
   }
 }
 
 @keyframes cloud_2 {
   from {
-    -webkit-transform: translateX(1900px);
-            transform: translateX(1900px);
+    -webkit-transform: translateX(139.09vw);
+            transform: translateX(139.09vw);
   }
   to {
-    -webkit-transform: translateX(-500px);
-            transform: translateX(-500px);
+    -webkit-transform: translateX(-36.6vw);
+            transform: translateX(-36.6vw);
   }
 }
 /* BOOKING FORM END */
@@ -370,8 +341,8 @@ select, input{
     left: 58%;
     width: 2%;
     z-index: 4;
-    padding: -10px;
-    margin: -10px;
+    padding: -0.73vw;
+    margin: -0.73vw;
 }
 .left{
     position: absolute;
@@ -398,7 +369,7 @@ select, input{
 .city {
     display: grid;
     background-color: #fff;
-    padding: 5px;
+    padding: 0.36vw;
     z-index: 5;
     border-radius: 5% 5%;
     width: 23%;
@@ -409,19 +380,19 @@ select, input{
     text-align: center;
     font-size: 1vw;
     text-align: left;
-    padding: 5px;
+    padding: 0.36vw;
     margin: 0;
 }
 .cul {
     columns: 2;
-    padding-left: 8px;
+    padding-left: 0.58vw;
     -webkit-columns: 2;
     -moz-columns: 2;
     list-style-type: none;
 }
 .cimg {
-    height: 100px;
-    border-radius: 10px 10px;
+    height: 7.32vw;
+    border-radius: 0.73vw 0.73vw;
 }
 .cimg img{
     height: 100%;
@@ -436,9 +407,9 @@ select, input{
 }
 .cbuy button{
     float: right;
-    margin-top: 10px;
+    margin-top: 0.73vw;
     background-color: #6A994E;
-    border-radius: 25px 25px;
+    border-radius: 1.83vw 1.83vw;
     border: none;
     color: #fff;
     font-weight: 500;
@@ -450,16 +421,16 @@ select, input{
     display: grid;
     grid-template-columns: 2fr 1fr;
     background-color: #F2E8CF;
-    border-radius: 10px 10px;
-    padding: 0 5px 0 5px;
+    border-radius: 0.73vw 0.73vw;
+    padding: 0 0.36vw 0 0.36vw;
 }
 
 .close {
     color: #aaaaaa;
     float: right;
-    font-size: 28px;
+    font-size: 2.049vw;
     font-weight: bold;
-    padding-top: -15px;
+    padding-top: -1.098vw;
 }
 .close:hover,
 .close:focus {
@@ -471,7 +442,7 @@ select, input{
 /* Cities' cards on the map */
 .akmolainfo{
     position: absolute;
-    top: 127%;
+    top: 129%;
     left: 51%;
     z-index: 5;
     width: 2%;
@@ -499,7 +470,7 @@ select, input{
 
 .atyrauinfo{
     position: absolute;
-    top: 153%;
+    top: 155%;
     left: 20%;
     z-index: 5;
     width: 2%;
@@ -555,8 +526,8 @@ select, input{
 
 .qyzylordainfo{
     position: absolute;
-    top: 169%;
-    left: 43%;
+    top: 165.5%;
+    left: 42.1%;
     z-index: 5;
     width: 2%;
 }
@@ -569,7 +540,7 @@ select, input{
 
 .northinfo{
     position: absolute;
-    top: 117%;
+    top: 115%;
     left: 51%;
     z-index: 5;
     width: 2%;
@@ -675,10 +646,10 @@ select, input{
     width: 100%;
     height: auto;
     margin: 0 auto;
-	grid-template-columns: repeat(auto-fit, 250px);
+	grid-template-columns: repeat(auto-fit, 18.3vw);
 	justify-content: center;
-	grid-gap: 10px;
-	padding: 10px;
+	grid-gap: 0.73vw;
+	padding: 0.73vw;
 	box-sizing: border-box;
 }
 .grid div{
@@ -689,7 +660,7 @@ select, input{
 	border-radius: 5% 5%;
 	background-color: #6A994E;
 	color: #fff;
-	box-shadow: 0px 0px 5px 0px gray;
+	box-shadow: 0 0 0.36vw 0 gray;
 }
 .gridt{
     color: #BC4749;
@@ -701,10 +672,10 @@ img{
 	border-radius: 5% 5%;
 }
 .tours-image{
-    width: 400px;
+    width: 29.28vw;
 }
 .title .road{
-    top: 60px;
+    top: 4.39vw;
     width: 40%;
 }
 .before {
@@ -720,17 +691,18 @@ img{
     display: block;
 }
 
-.button_about {
+.button {
   display: inline-block;
-  border-radius: 30px;
+  border-radius: 2.19vw;
   background-color: #BC4749;
   border: none;
   color: #FFFFFF;
   text-align: center;
   font-size: 1.15em;
-  width: 260px;
+  width: 19.03vw;
   transition: all 0.5s;
   cursor: pointer;
-  padding: 5px;
+  padding: 0.36vw;
 }
 /* GRID CARDS END */
+
