--- a/main/templates/main/planyourtrip.html
+++ b/main/templates/main/planyourtrip.html
@@ -4,11 +4,6 @@
 {% block title %}
     KazTravel - Homepage
 {% endblock %}
-{% block language %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-{% endblock %}
 
 {% block style %}
     #language {
@@ -40,33 +35,15 @@
 <div class="container">
   <h2>Plan your trip</h2><hr>
 
-  <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#home">Kazakhstan</a></li>
-    <li><a data-toggle="tab" href="#menu1">Time zones</a></li>
-    <li><a data-toggle="tab" href="#menu2">Languages</a></li>
-    <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
-  </ul>
+  <div class="booking_info">
+        <div class="opt" >
+          <span class="active myfont" id="opt1" onclick="myFunction()" style="padding-left: 0.65vw">Time zones</span>
+          <span class="myfont" id="opt2" onclick="myFunction2()" style="padding-left: 1.32vw">Languages</span>
+          <span class="myfont" id="opt3" onclick="myFunction3()" style="padding-left: 1.32vw">Communication</span>
+        </div>
 
-  <div class="tab-content">
-    <div id="home" class="tab-pane fade in active">
-      <h3>Why Kazakhstan?</h3>
-        <article class="content-article">
-            <p>In our globalized era, when travel destinations are becoming increasingly similar, many travelers are looking for something authentic and unusual. Kazakhstan, with its unique culture, rich history and vast unexplored areas, is definitely worth discovering.</p>
-            <p>The nature of Kazakhstan is striking in its diversity and splendor. Towering mountain ranges, vast flat steppes, green valleys, sprawling deserts, deep canyons, and turquoise lakes – Kazakhstan has everything to stun even the most experienced traveler. Nowadays, when there are fewer and fewer areas of pristine nature in the world, Kazakhstan boasts an abundance of natural beauty. From time immemorial, our ancestral nomads lived in connection with nature, treating it with care and ensuring sustainability.</p>
-            <p><img src="https://www.tourasia.kz/wp-content/uploads/semirechie.jpg"></p><p>Another thing Kazakhstan is proud of is its cultural diversity. People of many nationalities call Kazakhstan their home, having created a unique cultural mosaic here. At the same time Kazakhs cherish their nomadic past, unique traditions, and customs, and pass them from generation to generation.</p>
-            <p>While the country is young, having gained independence in 1991 after the dissolution of the USSR, the history of Kazakhstan dates back centuries. Travelers will marvel at medieval underground mosques, mausoleums, and ancient burial mounds. Those interested in the Soviet Era will be delighted to see amazing examples of Stalinist architecture as well.</p>
-            <p><img src="https://exporteram.com/wp-content/uploads/2020/02/Astana.jpg"><br></p>
-            <p>With such a rich past, Kazakhstan’s present is no less intriguing. Nur-Sultan, the country’s new capital, is known for its bold, futuristic architecture. Meanwhile, the mountainous city of Almaty encompasses green alleys, fountains, museums, bazaars, and even the world’s highest-altitude skating rink.</p><p>However, Kazakhstan’s main treasure is its people. Hospitality is a feature of Kazakhs’ national character and you'll definitely feel genuinely welcomed here.<br></p>
-            <img src="https://lp-cms-production.imgix.net/image_browser/Almaty_skyline_G.jpg">
-            <p>Visit our amazing country and have a chance to learn our ancient traditions, admire our breathtaking landscapes and immerse yourself in our nomadic culture. Immersing yourself  won’t be difficult since Kazakhstan has everything needed for a truly authentic experience. Moreover, we believe that all travelers are nomads in a certain sense; don't you agree? Reveal your inner nomad in the motherland of true nomads!</p>
-        </article>
-    </div>
-    <div id="menu1" class="tab-pane fade">
-      <h3>Time zones</h3>
-      <div class="help">
-          <h1 class="content-title content-title--bounded">Time zones of Kazakhstan</h1>
-          <div class="container--narrow">
-              <article class="content-article">
+        <div class="planyourtrip">
+            <article id="time_zones" class="content-article">
                   <p>The territory of the Republic of Kazakhstan is divided into two time zones – UTC+5 and UTC+6, although, in fact, geographically it occupies four time zones: UTC+3, UTC+4, UTC+5, UTC+6.</p>
                   <p>Transitions to summer time was cancelled in 2005, so Kazakhstan does not observe daylight saving time.</p>
                   <h4>Time difference with neighbouring countries</h4>
@@ -89,9 +66,9 @@
                       <li>+2 hours</li>
                   </ul>
                   <p><img src="https://upload.wikimedia.org/wikipedia/commons/4/45/%D0%A7%D0%B0%D1%81%D0%BE%D0%B2%D1%8B%D0%B5_%D0%BF%D0%BE%D1%8F%D1%81%D0%B0_%D0%B2_%D0%9A%D0%B0%D0%B7%D0%B0%D1%85%D1%81%D1%82%D0%B0%D0%BD%D0%B5.svg" data-filename="" style="width: 970px;"><br></p>
-</article></div></div>
-    </div>
-    <div id="menu2" class="tab-pane fade">
+            </article>
+
+            <div id="languages" style="display: none">
       <h3>Languages in Kazakhstan</h3>
       <p>The official language of Kazakhstan is Kazakh. Russian language is also used in state organizations and local governments, along with Kazakh.</p>
       <p>80-90% of the population is fluent in Russian. Basically all employees in travel agencies, hotels, restaurants and shops in large cities can speak English.</p>
@@ -200,11 +177,76 @@
           </tr>
       </table>
     </div>
-    <div id="menu3" class="tab-pane fade">
-      <h3>Menu 3</h3>
-      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+
+            <div id="communication" style="display: none">
+                <article class="container container--narrow content-article">
+                    <p>Cities and almost all the villages in Kazakhstan are covered with mobile network. Main mobile network operators in Kazakhstan are Kcell, Beeline, Tele2, Altel 4G. There is no big difference which operator you will choose when travelling in the cities. However, if you are going to reach remote areas of the country travelling long distances across vast steppes, then it is better to buy SIM card of such mobile network giants as Kcell or Beeline. Their networks may cover even uninhabited areas. Mobile service is operated at the following frequency ranges:&nbsp; GSM (900/1800), UMTS/WCDMA (2100 MHz), LTE(4G), LTE Advanced (700/800 MHz и 1700/1800 MHz), HSPA+ .</p>
+                    <p>It is possible to make international calls using a SIM card of any mobile network operator listed above. There is also Wi-Fi option based on the wireless access to the internet. A wide range of digital-options are offered in Kazakhstan such as mobile financial services, multimedia services, convergent services, as well as M2M-, MDM-, E2E-decision contents.&nbsp;</p>
+                    <p>As a rule, a SIM card itself is cheap and a small start balance is almost always included in the cost. Further on, you can choose necessary tariff. There are various tariffs, and at the sales points you can receive detailed information about tariffs and get help.</p>
+                    <p>It is possible to buy SIM cards even in small shops by the side of the roads. However, there is a bigger choice in large sales points at the airport, at the railway station, in the shopping malls; and, more likely, salespersons there will know English language and, hence, will be able to help you out.&nbsp;</p>
+                    <p>Below is a list of necessary documents to register mobile number/to conclude a subscription agreement.&nbsp;</p>
+                    <p>Individuals – residents of the Republic of Kazakhstan – should provide one of these documents:</p>
+                    <ul>
+                        <li>Passport of the citizen of the Republic of Kazakhstan</li>
+                        <li>ID of the citizen of the Republic of Kazakhstan</li>
+                        <li>Residence permit for a foreign citizen</li>
+                        <li>Stateless person certificate</li>
+                        <li>Certificate of birth</li>
+                    </ul>
+                    <p>Individuals – non-residents of the Republic of Kazakhstan – should provide these documents:</p>
+                    <ul>
+                        <li>Passport</li>
+                        <li>Valid certificate of temporary registration in the Republic of Kazakhstan, if applicable</li>
+                    </ul>
+                </article>
+            </div>
+
     </div>
+
+      <script>
+      function myFunction() {
+        var x = document.getElementById("time_zones");
+        x.style.display = "block";
+        var y = document.getElementById("languages");
+        y.style.display = "none";
+        var z = document.getElementById("communication");
+        z.style.display = "none";
+        var a = document.getElementById("opt1");
+        a.style.backgroundColor = "#6A994E";
+        var b = document.getElementById("opt2");
+        b.style.backgroundColor = "#386641";
+        var c = document.getElementById("opt3");
+        c.style.backgroundColor = "#386641";
+      }
+      function myFunction2() {
+        var x = document.getElementById("time_zones");
+        x.style.display = "none";
+        var y = document.getElementById("languages");
+        y.style.display = "block";
+        var z = document.getElementById("communication");
+        z.style.display = "none";
+        var a = document.getElementById("opt1");
+        a.style.backgroundColor = "#386641";
+        var b = document.getElementById("opt2");
+        b.style.backgroundColor = "#6A994E";
+        var c = document.getElementById("opt3");
+        c.style.backgroundColor = "#386641";
+      }
+      function myFunction3() {
+        var x = document.getElementById("time_zones");
+        x.style.display = "none";
+        var y = document.getElementById("languages");
+        y.style.display = "none";
+        var z = document.getElementById("communication");
+        z.style.display = "block";
+        var a = document.getElementById("opt1");
+        a.style.backgroundColor = "#386641";
+        var b = document.getElementById("opt2");
+        b.style.backgroundColor = "#386641";
+        var c = document.getElementById("opt3");
+        c.style.backgroundColor = "#6A994E";
+      }
+      </script>
   </div>
 </div>
 {% endblock %}
-
