Committed 22.06.2021 - Css updated

--- a/main/templates/main/addtocart.html
+++ b/main/templates/main/addtocart.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container" style="height: 82vh">
     <h3>Tour is added to cart successfully!</h3><hr>
 </div>
 {% endblock %}
