--- a/main/templates/main/customerprofile.html
+++ b/main/templates/main/customerprofile.html
@@ -4,7 +4,7 @@
     KazTravel - Profile
 {% endblock %}
 {% block content %}
-<div class="container">
+<div class="container" style="height: 82vh">
     <div class="row">
         <div class="col-md-4">
             <h3>Detail Information</h3><hr>
