--- a/main/templates/main/customerorderdetail.html
+++ b/main/templates/main/customerorderdetail.html
@@ -5,7 +5,7 @@
     KazTravel - Order Detail
 {% endblock %}
 {% block content %}
-<div class="container">
+<div class="container" style="height: 82vh">
     <div class="row">
         <div class="col-md-8 mx-auto">
             <h3>Order Detail</h3><hr>
