--- a/main/templates/main/mycart.html
+++ b/main/templates/main/mycart.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container" style="height: 82vh">
     <div class="row">
         <div class="col-md-8">
             <h4>Items in my cart</h4><hr>
