--- a/main/templates/main/tour_details.html
+++ b/main/templates/main/tour_details.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container" style="height: 82vh">
     <h3>Tour: {{product.title}}</h3><hr>
     <div class="row">
         <div class="col-md-4">
